--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-data/
-
-
 # Created by https://www.gitignore.io/api/python
 
 ### Python ###
@@ -63,3 +60,7 @@ docs/_build/
 
 # PyBuilder
 target/
+
+src/data/
+docs/
+*
